--- a/client/src/armadillogin.css
+++ b/client/src/armadillogin.css
@@ -1,3 +1,26 @@
+
+.armadillogin-modal {
+    position: fixed;
+    inset: 0; /* inset sets all 4 values (top right bottom left) much like how we set padding, margin etc., */
+    background-color: rgba(0, 0, 0, 0.6);
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    transition: opacity 0.5s ease;
+    overflow: hidden;
+    z-index: 999;
+    padding: 1rem;
+}
+
+.armadillogin-modal-content {
+    width: auto;
+    height: auto;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+
 .ReactModal__Overlay {
     opacity: 0;
     transition: opacity 250ms ease;
