:construction: Added new navbar to the bottom for navigation and improved navbar at the top.

--- a/client/src/armadillogin.css
+++ b/client/src/armadillogin.css
@@ -1,4 +1,16 @@
 
+
+#root {
+    max-width: 1280px;
+}
+
+.navbar {
+    -webkit-box-shadow: 0px 6px 6px -2px rgba(0,95,80,0.14);
+    -moz-box-shadow: 0px 6px 6px -2px rgba(0,95,80,0.14);
+    box-shadow: 0px 6px 6px -2px rgba(0,95,80,0.14);
+    z-index: 999;
+}
+
 .armadillogin-modal {
     position: fixed;
     inset: 0; /* inset sets all 4 values (top right bottom left) much like how we set padding, margin etc., */
