--- a/client/src/armadillogin.css
+++ b/client/src/armadillogin.css
@@ -33,6 +33,37 @@
     justify-content: center;
 }
 
+@font-face {
+    font-family: 'Material Symbols Rounded';
+    font-style: normal;
+    font-weight: 400;
+    src: url("../src/assets/fonts/MaterialSymbolsRounded.woff2") format('woff2');
+}
+
+.material-symbols-rounded {
+    font-family: 'Material Symbols Rounded', serif;
+    font-weight: normal;
+    font-style: normal;
+    font-size: 24px;
+    letter-spacing: normal;
+    text-transform: none;
+    display: inline-block;
+    white-space: nowrap;
+    word-wrap: normal;
+    direction: ltr;
+    -moz-font-feature-settings: 'liga';
+    -moz-osx-font-smoothing: grayscale;
+
+    vertical-align: middle;
+    line-height: 0 !important;
+    position: relative;
+    top: -1px;
+
+}
+
+
+
+
 .ReactModal__Overlay {
     opacity: 0;
     transition: opacity 250ms ease;
